recycling-bin/2026-04-21-repo-cleanup/tmp/phase3-metadata/objects/projects__dll/projects__dll.object-meta.xml
<CustomObject>
    <label>projects</label>
    <mktDataLakeAttributes>
        <creationType>Custom</creationType>
        <isEnabled>true</isEnabled>
        <objectCategory>Other</objectCategory>
    </mktDataLakeAttributes>
</CustomObject>