recycling-bin/2026-04-21-repo-cleanup/tmp/phase3-metadata/objects/projects__dll/fields/battery_flag__c.field-meta.xml
<CustomField>
    <fullName>battery_flag__c</fullName>
    <label>battery_flag</label>
    <defaultValue>false</defaultValue>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>battery_flag</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Checkbox</type>
</CustomField>