recycling-bin/2026-04-21-repo-cleanup/tmp/phase3-metadata/objects/projects__dll/fields/install_completed_date__c.field-meta.xml
<CustomField>
    <fullName>install_completed_date__c</fullName>
    <label>install_completed_date</label>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>install_completed_date</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Date</type>
</CustomField>